--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,20 +6,290 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇬🇧_GB_英国
+    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10848
+    udp: true
+    password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10847
+    udp: true
+    password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 172.99.190.109
-    port: 443
+    server: 03.kccic2pa.xyz
+    port: 50003
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    uuid: 3c1de58d-0dac-4000-9cc3-4330e1e73578
     alterId: 0
-    tls: true
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: ss
+    server: cn.pathx.me
+    port: 30037
+    password: 1ccf201b-c3f9-472c-b0d8-fa90f93a1c10
+    cipher: chacha20-ietf-poly1305
+  - &id005
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
-  - &id002
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id006
     name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 162.159.200.7
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.visaapp.top
+  - &id007
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 162.159.200.3
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.889611.com
+  - &id008
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 104.18.154.42
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.visaapp.top
+  - &id009
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 104.18.15.150
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id010
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 162.159.200.4
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.889611.com
+  - &id011
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+    type: vmess
+    server: 162.159.200.5
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ca3.889611.com
+  - &id012
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: vmess
+    server: 45.144.2.113
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.apple.com
+  - &id013
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.18.15.147
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us3.889611.com
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 162.159.200.6
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 104.18.15.148
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: er3.889611.com
+  - &id016
+    name: 🇮🇷_IR_伊朗->🇺🇸_US_美国
+    type: trojan
+    server: 185.94.99.205
+    port: 60302
+    udp: true
+    password: 3933e566-6e2d-460f-9363-48e2fa9ca103
+    sni: https://nafasmovie.com/
+    skip-cert-verify: true
+    network: tcp
+  - &id017
+    name: 🇰🇷_KR_韩国
+    type: trojan
+    server: 103.214.68.57
+    port: 10003
+    udp: true
+    password: 6x8HcghsjS
+    sni: yes998.chickenkiller.com
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 45.136.51.175
+    port: 32567
+    cipher: auto
+    uuid: df35304b-1f31-4b0d-9d02-f70256f732f1
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
+    type: vmess
+    server: 104.18.15.149
+    port: 80
+    cipher: auto
+    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: tr3.889611.com
+  - &id020
+    name: 🇺🇦_UA_乌克兰->🇹🇷_TR_土耳其
+    type: vmess
+    server: 185.158.211.186
+    port: 80
+    cipher: auto
+    uuid: 66fef53b-1b57-466d-89a4-bd99b90f6473
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@forwardv2ray
+      headers:
+        host: irisoft.servecounterstrike.com
+  - &id021
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: ss
+    server: 92.223.109.205
+    port: 51348
+    password: NE1maM9InLOKgK3dRPcuy6llYUKjZxhs3RGOWSqNRddj9Yn2
+    cipher: chacha20-ietf-poly1305
+  - &id022
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 52.58.246.187
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id023
+    name: 🇺🇸_US_美国_7
     type: vmess
     server: cfcdn1.sanfencdn9.com
     port: 2082
@@ -33,8 +303,8 @@ proxies:
       path: /video/CuTy87zAzV/
       headers:
         host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id003
-    name: 🇺🇸_US_美国_2
+  - &id024
+    name: 🇺🇸_US_美国_8
     type: vmess
     server: 104.21.229.78
     port: 2082
@@ -48,21 +318,16 @@ proxies:
       path: /video/CuTy87zAzV/
       headers:
         host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: glaSco.fx-trAder.shop
-    port: 80
-    cipher: aes-128-gcm
-    uuid: cdbb0899-7113-4d4e-f868-31339c75ad3c
-    alterId: 0
-    tls: false
+  - &id025
+    name: 🇫🇷_FR_法国
+    type: trojan
+    server: 52.47.119.220
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: vvv2vayo2.everythingisreve.shop
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -93,6 +358,27 @@ proxy-groups:
       - *id002
       - *id003
       - *id004
+      - *id005
+      - *id006
+      - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -102,6 +388,27 @@ proxy-groups:
       - *id002
       - *id003
       - *id004
+      - *id005
+      - *id006
+      - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -109,6 +416,27 @@ proxy-groups:
       - *id002
       - *id003
       - *id004
+      - *id005
+      - *id006
+      - *id007
+      - *id008
+      - *id009
+      - *id010
+      - *id011
+      - *id012
+      - *id013
+      - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
