--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,219 +6,63 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇦🇹_AT_奥地利
+    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
     type: trojan
     server: xibaozi.19890604.day
-    port: 10848
+    port: 10845
     udp: true
-    password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96
+    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    name: 🇨🇳_CN_中国->🇨🇿_CZ_捷克
     type: trojan
     server: xibaozi.19890604.day
-    port: 10847
+    port: 10846
     udp: true
-    password: da3f89e3-5676-4ca9-8f06-d51cb1ffbe96
+    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
     sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 03.kccic2pa.xyz
-    port: 50003
-    cipher: auto
-    uuid: 3c1de58d-0dac-4000-9cc3-4330e1e73578
-    alterId: 0
-    tls: false
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10838
+    udp: true
+    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
   - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: ss
-    server: cn.pathx.me
-    port: 30037
-    password: 1ccf201b-c3f9-472c-b0d8-fa90f93a1c10
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
-    cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: s1c.v2.v001sss.xyz
-  - &id006
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 162.159.200.7
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.visaapp.top
-  - &id007
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-    type: vmess
-    server: 162.159.200.3
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id008
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 104.18.154.42
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.visaapp.top
-  - &id009
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 104.18.15.150
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id010
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: 162.159.200.4
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id011
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-    type: vmess
-    server: 162.159.200.5
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id012
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.apple.com
-  - &id013
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.18.15.147
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us3.889611.com
-  - &id014
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 162.159.200.6
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id015
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.18.15.148
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: er3.889611.com
-  - &id016
-    name: 🇮🇷_IR_伊朗->🇺🇸_US_美国
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: trojan
-    server: 185.94.99.205
-    port: 60302
+    server: xibaozi.19890604.day
+    port: 10850
     udp: true
-    password: 3933e566-6e2d-460f-9363-48e2fa9ca103
-    sni: https://nafasmovie.com/
+    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
+    sni: cloudflare.node-ssl.cdn-alibaba.com
     skip-cert-verify: true
     network: tcp
-  - &id017
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: xibaozi.19890604.day
+    port: 10837
+    udp: true
+    password: 8c20a85b-f70f-48aa-a607-92d57eddc92f
+    sni: cloudflare.node-ssl.cdn-alibaba.com
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: cfa17a0d-5e7d-4871-976e-f116e0818123
+    cipher: chacha20-ietf-poly1305
+  - &id007
     name: 🇰🇷_KR_韩国
     type: trojan
     server: 103.214.68.57
@@ -228,36 +72,93 @@ proxies:
     sni: yes998.chickenkiller.com
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.136.51.175
-    port: 32567
-    cipher: auto
-    uuid: df35304b-1f31-4b0d-9d02-f70256f732f1
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 104.18.15.149
-    port: 80
-    cipher: auto
-    uuid: 9b170ad4-3211-4f0f-8bc9-80d356b67662
-    alterId: 0
-    tls: false
+  - &id008
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    type: trojan
+    server: 209.46.30.106
+    port: 443
+    udp: true
+    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
+    sni: nl4.djjc.sbs
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /djjc/nl1
       headers:
-        host: tr3.889611.com
-  - &id020
-    name: 🇺🇦_UA_乌克兰->🇹🇷_TR_土耳其
+        host: nl4.djjc.sbs
+  - &id009
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
+    type: trojan
+    server: 167.68.11.221
+    port: 443
+    udp: true
+    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
+    sni: k6us3.djjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /djjc/us3
+      headers:
+        host: k6us3.djjc.sbs
+  - &id010
+    name: 🇷🇺_RU_俄罗斯联邦->🇩🇪_DE_德国
+    type: trojan
+    server: 185.176.24.105
+    port: 443
+    udp: true
+    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
+    sni: k9de1.djjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /djjc/de1
+      headers:
+        host: k9de1.djjc.sbs
+  - &id011
+    name: 🇬🇧_GB_英国
     type: vmess
-    server: 185.158.211.186
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+  - &id012
+    name: 🇱🇺_LU_卢森堡->🇨🇦_CA_加拿大
+    type: trojan
+    server: 188.42.145.11
+    port: 443
+    udp: true
+    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
+    sni: k2us2.djjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /djjc/us2
+      headers:
+        host: k2us2.djjc.sbs
+  - &id013
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: trojan
+    server: 209.46.30.206
+    port: 443
+    udp: true
+    password: 9fec66cf-1006-4c74-acc5-601fdf8a71b9
+    sni: k9us1.djjc.sbs
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /djjc/us1
+      headers:
+        host: k9us1.djjc.sbs
+  - &id014
+    name: 🇱🇺_LU_卢森堡->🇹🇷_TR_土耳其
+    type: vmess
+    server: 202.78.162.6
     port: 80
     cipher: auto
     uuid: 66fef53b-1b57-466d-89a4-bd99b90f6473
@@ -269,65 +170,102 @@ proxies:
       path: /@forwardv2ray
       headers:
         host: irisoft.servecounterstrike.com
+  - &id015
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 142.171.237.214
+    port: 443
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/221312281009
+      headers:
+        host: www.23168499.xyz
+  - &id016
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 95.164.46.154
+    port: 8080
+    cipher: auto
+    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id017
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 162.159.135.221
+    port: 80
+    cipher: auto
+    uuid: fa828efe-ff0a-4afd-a4cb-245cf65432ee
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /?ed=2048
+      headers:
+        host: us.baipiao.fixddns.store
+  - &id018
+    name: 🇪🇸_ES_西班牙
+    type: trojan
+    server: 65.20.102.54
+    port: 443
+    udp: true
+    password: 842b5f9dd11e458d8613c907c4cc5723
+    sni: www.gpt123.one
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: 94.131.117.159
+    port: 80
+    cipher: auto
+    uuid: 72b3b89a-30c5-4dc7-8b6e-f61218b95eda
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id020
+    name: 🇩🇪_DE_德国->🇫🇷_FR_法国
+    type: vmess
+    server: yx.zhke.cf
+    port: 443
+    cipher: auto
+    uuid: 3b89f882-0c3f-4144-811d-91fce7ab3c05
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /D26xvdqUdCpvvPTz4R
+      headers:
+        host: h196-fr.kxnn.eu.org
   - &id021
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: ss
-    server: 92.223.109.205
-    port: 51348
-    password: NE1maM9InLOKgK3dRPcuy6llYUKjZxhs3RGOWSqNRddj9Yn2
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 52.58.246.187
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id023
-    name: 🇺🇸_US_美国_7
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2082
+    server: 94.131.13.110
+    port: 80
     cipher: auto
-    uuid: 27c7e182-88bf-4fc6-bbdd-83453061f47f
+    uuid: d3e40d59-b53c-4f4e-8867-bb598be864d2
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /video/CuTy87zAzV/
+      path: /vmess
       headers:
-        host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id024
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.21.229.78
-    port: 2082
-    cipher: auto
-    uuid: 27c7e182-88bf-4fc6-bbdd-83453061f47f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/CuTy87zAzV/
-      headers:
-        host: us4Bb5oSgJA.fzbqfrse.xyz
-  - &id025
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 52.47.119.220
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.miwan.co.uk
-    skip-cert-verify: true
-    network: tcp
+        host: lt1-vmess.sshmax.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -375,10 +313,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -405,10 +339,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
   - name: SELECT
     type: select
     proxies:
@@ -433,10 +363,6 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
